# packages/app/src/api/client.ts
@@ -8,7 +8,6 @@ import {
 	type CustomerId,
 	createCustomerSchema,
 	createFaqSchema,
-	customerChannelSchema,
 	customerStatusSchema,
 	type Faq,
 	type FaqId,
@@ -267,7 +266,6 @@ const customerResponseSchema = z.object({
 	email: z.string(),
 	phone: z.string(),
 	area: z.string(),
-	channel: customerChannelSchema,
 	status: customerStatusSchema,
 	lifetimeValue: z.number().int(),
 	balance: z.number().int(),
